# Weegames-Demo

./: .gitignore  Cargo.toml  README.md  index.html
demo-games/: Attribution.md  disc.json  interlude.json  prelude.json
games/bops/: cloud.json
games/second/: bike.json  boss.json  dawn.json  disc.json  explosion.json  gravity.json  interlude.json  knock.json  loading-screen.json  play-again.json  tanks.json
games/system/: choose-mode.json  interlude.json
games/yeah/: cat.json  monkey.json  pumpkin.json  quake.json
src/: main.rs  wee.rs
