[package]
name = "webgames"
version = "0.2.0"
authors = ["Ross <yeahross@protonmail.com>"]
edition = "2018"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true

[dependencies]
#macroquad = "0.3.5"
macroquad = { git = "https://github.com/yeahross0/macroquad", rev = "8dd289" }
# Note: This commit has some parts left unimplemented
# Use instead if you don't need wasm:
# c2 = "0.1.0"
c2 = { git = "https://github.com/yeahross0/cute-c2/", rev = "c22e4f8" }
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
indexmap = "1.3.2"
rand = "0.7.3"
futures = "0.3.8"